--- a/styles/alloy.less
+++ b/styles/alloy.less
@@ -8,6 +8,24 @@
 @import "octicon-mixins";
 
 .alloy {
+
+    .centered {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .message-lg {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        font-size: 1.5em;
+        text-align: center;
+
+        padding: 1.5em;
+    }
+
 }
 
 atom-text-editor {
