Finished up view flow

--- a/styles/alloy.less
+++ b/styles/alloy.less
@@ -9,8 +9,23 @@
 
 .alloy {
 
+    p {
+        margin-bottom: 0;
+    }
+
+    .btn-col {
+
+        min-width: 75%;
+
+        button {
+            width: 100%;
+            margin-bottom: 0.5em;
+        }
+    }
+
     .centered {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
     }
