--- a/styles/item-list.less
+++ b/styles/item-list.less
@@ -14,6 +14,36 @@
 @color-running: @text-color-success;
 @color-error: @text-color-error;
 
+.alloy .modal {
+
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    -webkit-animation: overlay-fade 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
+
+    .header {
+        border-top: 1px solid @level-3-color;
+    }
+
+    .content {
+        flex: 0 1 auto;
+        background-color: @level-1-color;
+        padding: @ui-size;
+        border-botton: 1px solid @level-3-color;
+        box-shadow: 0 6px 12px -2px rgba(0, 0, 0, 0.4);
+    }
+
+    .fill {
+        flex: 1 0 auto;
+        background-color: @level-2-color;
+        opacity: 0.9;
+    }
+
+}
+
 .alloy .header {
 
     display: flex;
