--- a/styles/item-list.less
+++ b/styles/item-list.less
@@ -75,6 +75,15 @@
 
 }
 
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 .alloy .item-list {
 
     display: flex;
@@ -86,8 +95,43 @@
     .item {
 
         &.running {
-            .icon { color: @color-running; };
-            kbd { background-color: @color-running; }
+
+            cursor: default;
+            background-color: @level-2-color;
+            // box-shadow: inset 0 0 1px 1px @level-3-color;
+            // box-shadow: inset 5px 0 5px -5px @level-3-color;
+            // border-bottom: 1px solid @level-2-color;
+
+            &:hover {
+                div {
+                    background-color: transparent;
+                }
+            }
+
+            & + .running {
+                border-top: 1px solid @level-3-color;
+                // box-shadow: inset 5px 0 5px -5px @level-3-color;
+            }
+
+            .icon {
+                color: @color-running;
+                &.right::before {
+                    line-height: 0.9em;  // THIS WORKS FOR CENTERING FOR SOME REASON
+                    animation-name: spin;
+                    animation-duration: 1500ms;
+                    animation-iteration-count: infinite;
+                    animation-timing-function: ease;
+                }
+            };
+
+            .cmd-type {
+                background-color: transparent;
+                border-right: 1px solid transparent;
+            }
+
+            kbd {
+                background-color: @color-running;
+            }
         }
 
         &.error {
@@ -98,12 +142,12 @@
         display: flex;
         cursor: pointer;
         line-height: @ui-line-height;
-        border-bottom: 1px solid @pane-item-border-color;
+        border-top: 1px solid @pane-item-border-color;
         background-color: @level-3-color;
         user-select: none;
 
-        &:first-of-type {
-            border-top: 1px solid @pane-item-border-color;
+        &:last-of-type {
+            border-bottom: 1px solid @pane-item-border-color;
         }
 
         &:hover {
@@ -114,6 +158,10 @@
 
         .icon {
             flex: 0 1 auto;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             &::before {
                 margin-right: 0;
                 text-align: center;
@@ -138,7 +186,8 @@
 
         .right {
             flex: 0 1 auto;
-            padding: @list-item-padding;
+            // padding: @list-item-padding;
+            padding-right: @list-item-padding-h;
             padding-left: 0;
         }
 
