Lots of stuff, mostly migrating to new lib

--- a/styles/item-list.less
+++ b/styles/item-list.less
@@ -119,7 +119,7 @@
                     line-height: 0.9em;  // THIS WORKS FOR CENTERING FOR SOME REASON
                     animation-name: spin;
                     animation-duration: 1500ms;
-                    animation-iteration-count: infinite;
+                    animation-iteration-count: 5;
                     animation-timing-function: ease;
                 }
             };
